Modified a lot of files

--- a/client/src/css/blog/Reader/_reader.scss
+++ b/client/src/css/blog/Reader/_reader.scss
@@ -39,7 +39,7 @@
           margin: 5px 5px;
           font-size: 1.5rem;
           padding: 1rem;
-          background: lighten(grey, 40%);
+          // background: lighten(grey, 40%);
         }
         i {
           font-style: italic;
