--- a/client/src/css/blog/main.scss
+++ b/client/src/css/blog/main.scss
@@ -65,6 +65,19 @@ body {
       line-height: 100px;
       animation: jumb 2s infinite;
     }
+    @keyframes freeFall {
+      50% {
+        transform: scale(1.4, 1.4);
+        // width: 30px;
+        // height: 30px;
+      }
+      100% {
+        transform: scale(1.2, 1.2);
+        // width: 20px;
+        // height: 20px;
+      }
+
+    }
     @keyframes jumb {
       0% {
         transform: translateY(0px);
