Fixed design issues

--- a/client/src/css/blog/Articlespage/_articlePage__body.scss
+++ b/client/src/css/blog/Articlespage/_articlePage__body.scss
@@ -23,7 +23,7 @@
         border: none;
         padding-left: 1rem;
         cursor: pointer;
-        color: $primary;
+        color: black;
         width: 500px;
         padding: 1rem;
         outline: none;
