--- a/client/src/css/blog/Articlespage/_aritcle__preview.scss
+++ b/client/src/css/blog/Articlespage/_aritcle__preview.scss
@@ -59,11 +59,18 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+        height: 380px;
+        overflow-y: hidden;
+      
 
         &__header {
           text-align: center;
           height: 100px;
           padding: 1rem;
+        }
+        article{
+          height: 50%;
+          overflow: hidden;
         }
         p {
           @include border(yellow);
@@ -81,12 +88,19 @@
           justify-content: center;
           @include border(blue);
 
+          button{
+            width: 120px;
+            height: 60px;
+            font-size: .9rem;
+          }
+
           #back {
             width: 100px;
             height: 60px;
             background: none;
             border: none;
             cursor: pointer;
+            font-size: .9rem;
             &:hover {
               border-bottom: 2px solid gold;
             }
