--- a/client/src/css/blog/Articlespage/_articlePage__body.scss
+++ b/client/src/css/blog/Articlespage/_articlePage__body.scss
@@ -74,7 +74,7 @@
       width: 355px;
       height: 266px;
       margin: 10px 0;
-      border-radius: 2px;
+      border-radius: 1px;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
@@ -83,9 +83,9 @@
       border-top: 5px solid #663399;
       transition: all 0.5s ease-in;
       @include border(brown);
-      border-top: 2px solid $secondary;
-      border-bottom: 2px solid $secondary;
-      border-width: 5px;
+      border-top: 1px solid $secondary;
+      border-bottom: 1px solid $secondary;
+      border-width: 1px;
       position: relative;
 
       @include smallerPhones {
@@ -101,7 +101,7 @@
       &__image {
         height: 100%;
         width: 100%;
-        border-radius: 4px 4px 0 0;
+        border-radius: 2px 2px 0 0;
         background: $secondary;
         overflow: hidden;
         position: absolute;
@@ -137,7 +137,7 @@
               display: flex;
               flex-direction: column;
               justify-content: center;
-              color: $primary;
+              color: #000;
               // padding: .4rem;
               @include border(#fff);
               h3 {
@@ -214,7 +214,7 @@
       }
 
       @include desktop {
-        width: 1000px;
+        width: 800px;
         height: 300px;
         margin: 10px auto;
         border-radius: 2px;
@@ -226,13 +226,13 @@
         border-top: 5px solid #663399;
         transition: all 0.5s ease-in;
         @include border(brown);
-        border-top: 2px solid $secondary;
-        border-bottom: 2px solid $secondary;
-        border-width: 5px;
+        border-top: 1px solid #000;
+        border-bottom: 1px solid #000;
+        border-width: 1px;
 
         &:hover {
-          border-left: 2px solid $primary;
-          border-width: 5px;
+          border-right: 2px solid $primary;
+          border-width: 1px;
         }
         &__image {
           height: 100%;
@@ -261,8 +261,9 @@
 
               &-avatar {
                 img {
-                  height: 50px;
-                  width: 50px;
+                  margin: 10px;
+                  height: 40px;
+                  width: 40px;
                   border-radius: 50px;
                 }
               }
@@ -271,7 +272,7 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                color: $primary;
+                color: #000;
                 // padding: .4rem;
                 @include border(#fff);
                 h3 {
@@ -314,6 +315,7 @@
               width: inherit;
               height: 70px;
               overflow: hidden;
+              color: grey;
             }
             p {
               @include border(red);
