--- a/client/src/css/blog/main.css
+++ b/client/src/css/blog/main.css
@@ -979,19 +979,20 @@
           cursor: pointer;
           background: linear-gradient(to right, #21209c);
           border-top: 5px solid #663399;
-          transition: all 0.5s ease-in;
+          transition: all 0.1s ease-in;
           border: 2px solid transparent;
           border-top: 1px solid #000;
           border-bottom: 1px solid #000;
           border-width: 1px; }
           .articlesBox__body .item:hover {
             border-right: 2px solid #21209c;
-            border-width: 1px; }
+            border-width: 1px;
+            background: rgba(255, 255, 255, 0.322); }
           .articlesBox__body .item__image {
             height: 100%;
             width: 50%;
             border-radius: 4px 4px 0 0;
-            background: #fdb827;
+            background: rgba(255, 255, 255, 0.322);
             position: relative;
             filter: blur(0);
             border: 2px solid transparent; }
