Changed font, modified items.js, modified reader.js, included article tags, changed footer email to lowercase

--- a/client/src/css/blog/Articlespage/_aritcle__preview.scss
+++ b/client/src/css/blog/Articlespage/_aritcle__preview.scss
@@ -41,10 +41,8 @@
       position: relative;
 
       &__left {
-        .poly {
-          width: 100%;
-          height: 100%;
-        }
+        background-size: cover;
+        object-fit: cover;
         .any {
           width: 200px;
           height: 200px;
