--- a/client/src/css/blog/main.scss
+++ b/client/src/css/blog/main.scss
@@ -30,8 +30,8 @@
 @import "footer";
 
 body {
-  font-family: "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode",
-    Geneva, Verdana, sans-serif;
+  font-family: "Corbel Light", "DejaVu Sans Light", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode",
+    "Geneva", "Verdana", sans-serif;
   overflow-x: hidden;
   background-color: $background;
   line-height: 1.5;
