--- a/client/src/css/blog/Articlespage/_articlePage__body.scss
+++ b/client/src/css/blog/Articlespage/_articlePage__body.scss
@@ -68,7 +68,9 @@
     height: fit-content;
     flex-direction: column;
     flex-wrap: wrap;
-    @include border(green);
+    justify-content: center;
+    align-items: center;
+    @include border(rgb(105, 124, 105));
 
     .item {
       width: 355px;
@@ -80,22 +82,34 @@
       justify-content: flex-start;
       cursor: pointer;
       background: $background;
-      border-top: 5px solid #663399;
+      // border-top: 5px solid #663399;
       transition: all 0.5s ease-in;
       @include border(brown);
-      border-top: 1px solid $secondary;
-      border-bottom: 1px solid $secondary;
+      // border-top: 1px solid $secondary;
+      // border-bottom: 1px solid $secondary;
       border-width: 1px;
       position: relative;
 
       @include smallerPhones {
-        width: 400px;
+        width: 100%;
         height: 250px;
       }
 
+      @include phone{
+        width: 100%;
+        height: 250px;
+
+        &:hover {
+          border-right: 2px solid $primary;
+          border-width: 1px;
+          background: rgba(255, 255, 255, 0.322);
+        }
+      }
+
       &:hover {
-        border-left: 2px solid $primary;
-        border-width: 5px;
+        border-right: 2px solid $primary;
+          border-width: 1px;
+          background: rgba(255, 255, 255, 0.322);
       }
 
       &__image {
@@ -111,6 +125,7 @@
         img {
           height: 100%;
           width: 100%;
+          object-fit: cover;
         }
       }
 
@@ -223,16 +238,17 @@
         justify-content: flex-start;
         cursor: pointer;
         background: $background;
-        border-top: 5px solid #663399;
+        // border-top: 5px solid #663399;
         transition: all 0.1s ease-in;
         @include border(brown);
-        border-top: 1px solid #000;
-        border-bottom: 1px solid #000;
-        border-width: 1px;
+        // border-top: 1px solid #000;
+        // border-bottom: 1px solid #000;
+        // border-width: 1px;
+        box-shadow: 2px 2px 12px 2px rgba(179, 179, 179, 0.507);
 
         &:hover {
           border-right: 2px solid $primary;
-          border-width: 1px;
+          border-width: 2px;
           background: rgba(255, 255, 255, 0.322);
         }
         &__image {
@@ -240,7 +256,6 @@
           width: 50%;
           border-radius: 4px 4px 0 0;
           background: rgba(255, 255, 255, 0.322);
-          background-image: url("../../pics/undraw_Specs_re_546x.svg");
           background-size: cover;
           background-repeat: no-repeat;
           position: relative;
@@ -249,14 +264,15 @@
           img {
             height: 100%;
             width: 100%;
+            object-fit: cover;
           }
         }
 
         &__main {
           width: 50%;
-          height: 250px;
-
-          // background: blue;
+          height: 245px;
+          // border-top: 1px solid #000;
+          // border-bottom: 1px solid #000;
           .meta-data {
             @include border(red);
             &-main {
@@ -272,12 +288,10 @@
                 }
               }
               &-text {
-                // text-align: center;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                color: #000;
-                // padding: .4rem;
+                color: #000;            
                 @include border(#fff);
                 h3 {
                   font-size: 1rem;
