--- a/client/src/css/blog/CounsellingPage/_counsellingpage.scss
+++ b/client/src/css/blog/CounsellingPage/_counsellingpage.scss
@@ -19,7 +19,7 @@
   height: 500px;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-around;
   margin-left: 100px;
 
   @include border(blue);
@@ -54,7 +54,7 @@
 
   &__info {
     @include border(brown);
-    width: 50%;
+    width: 55%;
     height: 400px;
     display: flex;
     flex-direction: row;
@@ -63,7 +63,7 @@
     margin-top: 50px;
     // z-index: -20;
     // background: transparent;
-    box-shadow: 0px 2px 20px 3px rgba(136, 136, 136, 0.623);
+    // box-shadow: 0px 2px 20px 3px rgba(136, 136, 136, 0.623);
 
     & > div {
       @include border(blue);
@@ -75,14 +75,18 @@
       }
       h3 {
         font-size: 2rem;
-        color: grey;
+        color: black;
       }
       p {
-        width: 350px;
-        height: 160px;
-        color: grey;
+        width: 400px;
+        height: 180px;
+        color: black;
         overflow-y: scroll;
+        padding: 1rem;
         @include border(orange);
+        // scrollbar-color: #6969dd #e0e0e0;
+        scrollbar-width: thin;
+
       }
       .buttons {
         margin-top: 30px;
