--- a/client/src/css/blog/main.css
+++ b/client/src/css/blog/main.css
@@ -855,6 +855,8 @@
     height: fit-content;
     flex-direction: column;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     border: 2px solid transparent; }
     .articlesBox__body .item {
       width: 355px;
@@ -866,20 +868,26 @@
       justify-content: flex-start;
       cursor: pointer;
       background: linear-gradient(to right, #21209c);
-      border-top: 5px solid #663399;
       transition: all 0.5s ease-in;
       border: 2px solid transparent;
-      border-top: 1px solid #fdb827;
-      border-bottom: 1px solid #fdb827;
       border-width: 1px;
       position: relative; }
       @media (max-width: 375px) {
         .articlesBox__body .item {
-          width: 400px;
+          width: 100%;
           height: 250px; } }
+      @media (min-width: 376px) and (max-width: 767px) {
+        .articlesBox__body .item {
+          width: 100%;
+          height: 250px; }
+          .articlesBox__body .item:hover {
+            border-right: 2px solid #21209c;
+            border-width: 1px;
+            background: rgba(255, 255, 255, 0.322); } }
       .articlesBox__body .item:hover {
-        border-left: 2px solid #21209c;
-        border-width: 5px; }
+        border-right: 2px solid #21209c;
+        border-width: 1px;
+        background: rgba(255, 255, 255, 0.322); }
       .articlesBox__body .item__image {
         height: 100%;
         width: 100%;
@@ -892,7 +900,8 @@
         border: 2px solid transparent; }
         .articlesBox__body .item__image img {
           height: 100%;
-          width: 100%; }
+          width: 100%;
+          object-fit: cover; }
       .articlesBox__body .item__main {
         width: 100%;
         height: 250px; }
@@ -978,22 +987,18 @@
           justify-content: flex-start;
           cursor: pointer;
           background: linear-gradient(to right, #21209c);
-          border-top: 5px solid #663399;
           transition: all 0.1s ease-in;
           border: 2px solid transparent;
-          border-top: 1px solid #000;
-          border-bottom: 1px solid #000;
-          border-width: 1px; }
+          box-shadow: 2px 2px 12px 2px rgba(179, 179, 179, 0.507); }
           .articlesBox__body .item:hover {
             border-right: 2px solid #21209c;
-            border-width: 1px;
+            border-width: 2px;
             background: rgba(255, 255, 255, 0.322); }
           .articlesBox__body .item__image {
             height: 100%;
             width: 50%;
             border-radius: 4px 4px 0 0;
             background: rgba(255, 255, 255, 0.322);
-            background-image: url("../../pics/undraw_Specs_re_546x.svg");
             background-size: cover;
             background-repeat: no-repeat;
             position: relative;
@@ -1001,10 +1006,11 @@
             border: 2px solid transparent; }
             .articlesBox__body .item__image img {
               height: 100%;
-              width: 100%; }
+              width: 100%;
+              object-fit: cover; }
           .articlesBox__body .item__main {
             width: 50%;
-            height: 250px; }
+            height: 245px; }
             .articlesBox__body .item__main .meta-data {
               border: 2px solid transparent; }
               .articlesBox__body .item__main .meta-data-main {
@@ -1111,16 +1117,16 @@
       height: 380px;
       border: 2px solid transparent;
       position: relative; }
-      .article__preview__maincon__items .pre__part__left .poly {
-        width: 100%;
-        height: 100%; }
-      .article__preview__maincon__items .pre__part__left .any {
-        width: 200px;
-        height: 200px;
-        position: absolute;
-        top: 20%;
-        left: 20%;
-        border: 2px solid transparent; }
+      .article__preview__maincon__items .pre__part__left {
+        background-size: cover;
+        object-fit: cover; }
+        .article__preview__maincon__items .pre__part__left .any {
+          width: 200px;
+          height: 200px;
+          position: absolute;
+          top: 20%;
+          left: 20%;
+          border: 2px solid transparent; }
       .article__preview__maincon__items .pre__part__middle {
         padding: 1rem 0;
         display: flex;
@@ -1189,6 +1195,44 @@
       padding: 1rem;
       display: flex;
       flex-direction: column; }
+      .reader__meta__desc .outlets {
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 1rem 0;
+        border: 2px solid transparent; }
+        .reader__meta__desc .outlets hr {
+          background-color: grey;
+          height: 1px;
+          border: 0; }
+        .reader__meta__desc .outlets .tags {
+          padding: 1rem 0; }
+          .reader__meta__desc .outlets .tags span {
+            border: 1px solid black;
+            padding: 0.5rem;
+            margin-right: 5px; }
+        .reader__meta__desc .outlets .social_media {
+          display: flex;
+          justify-content: space-between; }
+          .reader__meta__desc .outlets .social_media_icons {
+            width: 200px;
+            border: 2px solid transparent;
+            display: flex;
+            justify-content: space-around; }
+            .reader__meta__desc .outlets .social_media_icons a {
+              color: #000;
+              font-size: 25px; }
+              .reader__meta__desc .outlets .social_media_icons a:hover {
+                color: grey; }
+          .reader__meta__desc .outlets .social_media .mainTag {
+            border: 2px solid transparent; }
+            .reader__meta__desc .outlets .social_media .mainTag h4 {
+              font-size: 20px; }
+        .reader__meta__desc .outlets .theOtherContent {
+          width: 200px;
+          display: flex;
+          justify-content: space-evenly; }
       .reader__meta__desc .reader__main__content {
         border: 2px solid transparent;
         width: 700px; }
@@ -1285,7 +1329,7 @@
                 .reader__relatedArticles__body .item__main .meta-data-main-text h3 {
                   font-size: 1rem; }
                 .reader__relatedArticles__body .item__main .meta-data-main-text span {
-                  font-size: .8rem; }
+                  font-size: 0.8rem; }
           .reader__relatedArticles__body .item__main__desc {
             border: 2px solid transparent;
             padding: 1rem;
@@ -1717,7 +1761,7 @@
   height: 500px;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-around;
   margin-left: 100px;
   border: 2px solid transparent; }
   .person__image {
@@ -1743,14 +1787,13 @@
       border-radius: 50%; }
   .person__info {
     border: 2px solid transparent;
-    width: 50%;
+    width: 55%;
     height: 400px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 1rem;
-    margin-top: 50px;
-    box-shadow: 0px 2px 20px 3px rgba(136, 136, 136, 0.623); }
+    margin-top: 50px; }
     .person__info > div {
       border: 2px solid transparent;
       padding: 1rem; }
@@ -1760,13 +1803,15 @@
         font-style: normal; }
       .person__info > div h3 {
         font-size: 2rem;
-        color: grey; }
+        color: black; }
       .person__info > div p {
-        width: 350px;
-        height: 160px;
-        color: grey;
+        width: 400px;
+        height: 180px;
+        color: black;
         overflow-y: scroll;
-        border: 2px solid transparent; }
+        padding: 1rem;
+        border: 2px solid transparent;
+        scrollbar-width: thin; }
       .person__info > div .buttons {
         margin-top: 30px; }
         .person__info > div .buttons button {
@@ -2089,7 +2134,7 @@
         color: #fff; }
 
 body {
-  font-family: "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Corbel Light", "DejaVu Sans Light", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", "Geneva", "Verdana", sans-serif;
   overflow-x: hidden;
   background-color: linear-gradient(to right, #21209c);
   line-height: 1.5;
